force-app/main/default/objects/Order/fields/Account_CS_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_CS_ID__c</fullName>
    <formula>Order_Account_ID__r.case_safe_id__c</formula>
    <label>Account CS ID</label>
    <type>Text</type>
</CustomField>