force-app/main/default/objects/Order/fields/ActualDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ActualDeliveryDate__c</fullName>
    <label>ActualDeliveryDate</label>
    <type>Date</type>
</CustomField>