force-app/main/default/objects/Order/fields/AD_KG__c.field-meta.xml
<CustomField>
    <fullName>AD_KG__c</fullName>
    <label>AD KG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>