force-app/main/default/objects/Order/fields/Added_to_Airtable__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Airtable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Airtable?</label>
    <type>Checkbox</type>
</CustomField>