force-app/main/default/objects/Order/fields/AdHocProducts__c.field-meta.xml
<CustomField>
    <fullName>AdHocProducts__c</fullName>
    <label>Ad-Hoc Products</label>
    <summaryFilterItems>
        <field>OrderItem.WTNProduct__c</field>
        <operation>equals</operation>
        <value>Ad-Hoc</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>