force-app/main/default/objects/Order/fields/BagsQuantity__c.field-meta.xml
<CustomField>
    <fullName>BagsQuantity__c</fullName>
    <label>Bags Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>