force-app/main/default/objects/Order/fields/BinDeliveries__c.field-meta.xml
<CustomField>
    <fullName>BinDeliveries__c</fullName>
    <label>Bin Deliveries</label>
    <summaryFilterItems>
        <field>OrderItem.Product_Category__c</field>
        <operation>equals</operation>
        <value>External Bin</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>