force-app/main/default/objects/Order/fields/Christmas_Status__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Status__c</fullName>
    <label>Christmas Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>