force-app/main/default/objects/Order/fields/clearance_collection_time__c.field-meta.xml
<CustomField>
    <fullName>clearance_collection_time__c</fullName>
    <label>clearance_collection_time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anytime (9-5)</fullName>
            </value>
            <value>
                <fullName>Morning (9-12)</fullName>
            </value>
            <value>
                <fullName>Afternoon (1-5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>