force-app/main/default/objects/Order/fields/Clearance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Clearance_End_Date__c</fullName>
    <inlineHelpText>Used in the WTN for the end date.
The Start date for WTN is the delivery date.</inlineHelpText>
    <label>Clearance End Date</label>
    <type>Date</type>
</CustomField>