force-app/main/default/objects/Order/fields/Clearance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Notes__c</fullName>
    <label>Clearance Notes</label>
    <type>TextArea</type>
</CustomField>