force-app/main/default/objects/Order/fields/Clearance_Order__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you are creating a Clearance Order.</inlineHelpText>
    <label>Clearance Order</label>
    <type>Checkbox</type>
</CustomField>