force-app/main/default/objects/Order/fields/Clearance_Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>Clearance_Requested_Time__c</fullName>
    <label>Clearance Requested Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anytime (9-5)</fullName>
            </value>
            <value>
                <fullName>Morning (9-1)</fullName>
            </value>
            <value>
                <fullName>Afternoon (1-5)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>