force-app/main/default/objects/Order/fields/CollectionOrder__c.field-meta.xml
<CustomField>
    <fullName>CollectionOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Overweight Charge Orders</relationshipLabel>
    <relationshipName>OverweightChargeOrders</relationshipName>
    <type>Lookup</type>
</CustomField>