force-app/main/default/objects/Order/fields/CollectionProducts__c.field-meta.xml
<CustomField>
    <fullName>CollectionProducts__c</fullName>
    <label>Collection Products</label>
    <summaryFilterItems>
        <field>OrderItem.IsCollection__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>