force-app/main/default/objects/Order/fields/Confirm_Payment__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Payment</label>
    <type>Checkbox</type>
</CustomField>