force-app/main/default/objects/Order/fields/Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An Auto Email was sent via SendGrid</description>
    <label>Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>