force-app/main/default/objects/Order/fields/ConfirmationEmailStatus__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationEmailStatus__c</fullName>
    <label>Confirmation Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Do Not Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>