force-app/main/default/objects/Order/fields/Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile__c</fullName>
    <inlineHelpText>This field is used in the Supplier App.</inlineHelpText>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>