force-app/main/default/objects/Order/fields/Cost_Number_inc_VAT__c.field-meta.xml
<CustomField>
    <fullName>Cost_Number_inc_VAT__c</fullName>
    <description>Used in clearance automation - please do not delete</description>
    <formula>SUBSTITUTE(TEXT(Order_Amount_inc_VAT__c), &quot;£&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Number inc VAT</label>
    <type>Text</type>
</CustomField>