force-app/main/default/objects/Order/fields/cp_order_id__c.field-meta.xml
<CustomField>
    <fullName>cp_order_id__c</fullName>
    <label>cp_order_id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>