force-app/main/default/objects/Order/fields/Created_by__c.field-meta.xml
<CustomField>
    <fullName>Created_by__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot;  &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by</label>
    <type>Text</type>
</CustomField>