force-app/main/default/objects/Order/fields/Created_By_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Full_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created_By_Full_Name on Order 1 needs to be the copy of the Created By of Order 2.</description>
    <label>Created By Full Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>