force-app/main/default/objects/Order/fields/Created_Later__c.field-meta.xml
<CustomField>
    <fullName>Created_Later__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Later</label>
    <type>Checkbox</type>
</CustomField>