force-app/main/default/objects/Order/fields/Credit_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Payment__c</fullName>
    <formula>true</formula>
    <label>Credit Card Payment</label>
    <type>Checkbox</type>
</CustomField>