force-app/main/default/objects/Order/fields/CreditCard_Payment__c.field-meta.xml
<CustomField>
    <fullName>CreditCard_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Payment</label>
    <type>Checkbox</type>
</CustomField>