force-app/main/default/objects/Order/fields/CreditNoteReason__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteReason__c</fullName>
    <label>Credit Note Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditNoteReasons</valueSetName>
    </valueSet>
</CustomField>