force-app/main/default/objects/Order/fields/CS_Issue_Fixed__c.field-meta.xml
<CustomField>
    <fullName>CS_Issue_Fixed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CS Issue Fixed?</label>
    <type>Checkbox</type>
</CustomField>