force-app/main/default/objects/Order/fields/CS_who_Placed_Order__c.field-meta.xml
<CustomField>
    <fullName>CS_who_Placed_Order__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS who Placed Order</label>
    <type>Text</type>
</CustomField>