force-app/main/default/objects/Order/fields/CS_who_Placed_the_Order__c.field-meta.xml
<CustomField>
    <fullName>CS_who_Placed_the_Order__c</fullName>
    <label>CS who Placed the Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>