force-app/main/default/objects/Order/fields/Delivered_on_time__c.field-meta.xml
<CustomField>
    <fullName>Delivered_on_time__c</fullName>
    <formula>IF(
ExpectedDeliveryDate__c &lt; IF(ISBLANK(Delivery_Date__c), TODAY(), Delivery_Date__c), 
&quot;No&quot;, 
IF(ISBLANK(Delivery_Date__c), &quot;Awaiting&quot;, &quot;Yes&quot;)
)</formula>
    <label>Delivered on time?</label>
    <type>Text</type>
</CustomField>