force-app/main/default/objects/Order/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Delivery date from Enqix system.</description>
    <inlineHelpText>Delivery date from Enqix system.</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>