force-app/main/default/objects/Order/fields/Delivery_Date_Report__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Report__c</fullName>
    <formula>Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date Report</label>
    <type>Date</type>
</CustomField>