force-app/main/default/objects/Order/fields/Delivery_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Driver_Name__c</fullName>
    <label>Delivery Driver Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>