force-app/main/default/objects/Order/fields/Delivery_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Feedback__c</fullName>
    <label>Delivery Feedback</label>
    <length>2550</length>
    <type>LongTextArea</type>
</CustomField>