force-app/main/default/objects/Order/fields/Delivery_query_closed_or_ran_out_of_time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_query_closed_or_ran_out_of_time__c</fullName>
    <formula>OR( reason__c = &quot;Customer Closed&quot;,reason__c = &quot;Ran out of Time&quot;)</formula>
    <label>Delivery query closed or ran out of time</label>
    <type>Checkbox</type>
</CustomField>