force-app/main/default/objects/Order/fields/Delivery_Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Round_Number__c</fullName>
    <label>Delivery  Round Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>