force-app/main/default/objects/Order/fields/Delivery_Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Signature_Name__c</fullName>
    <label>POD Signature Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>