force-app/main/default/objects/Order/fields/Driver_Notes__c.field-meta.xml
<CustomField>
    <fullName>Driver_Notes__c</fullName>
    <inlineHelpText>This field is used in the Supplier App and linked to Detrack.</inlineHelpText>
    <label>Order Delivery Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>