force-app/main/default/objects/Order/fields/eCommerce_Order__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eCommerce Order?</label>
    <type>Checkbox</type>
</CustomField>