force-app/main/default/objects/Order/fields/Enqix_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Id__c</fullName>
    <description>Order ID as defined in Enqix system.</description>
    <externalId>true</externalId>
    <inlineHelpText>Order ID as defined in Enqix system.</inlineHelpText>
    <label>Enqix Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>