force-app/main/default/objects/Order/fields/Enqix_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Location_ID__c</fullName>
    <label>Enqix Location ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>