force-app/main/default/objects/Order/fields/Enqix_Order_Ref__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Order_Ref__c</fullName>
    <description>Order Ref value as assigned in the Enqix system</description>
    <inlineHelpText>Order Ref value as assigned in the Enqix system</inlineHelpText>
    <label>Enqix Order Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>