force-app/main/default/objects/Order/fields/Enqix_Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Order_Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>