force-app/main/default/objects/Order/fields/Enqix_Order_Summary_f__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Order_Summary_f__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary - DO NOT USE</label>
    <type>Text</type>
</CustomField>