force-app/main/default/objects/Order/fields/External_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Unique_ID__c</fullName>
    <formula>Account.External_Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Unique ID</label>
    <type>Text</type>
</CustomField>