force-app/main/default/objects/Order/fields/Extra_Product_Added__c.field-meta.xml
<CustomField>
    <fullName>Extra_Product_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the Supplier App</description>
    <label>Extra Product Added</label>
    <type>Checkbox</type>
</CustomField>