force-app/main/default/objects/Order/fields/F_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>F_Delivery_Date__c</fullName>
    <formula>if(Delivery_Status__c = &quot;Ready For Invoicing&quot; , Delivery_Date__c,


if(Delivery_Status__c = &quot;Completed on Device&quot;  ,today(),  
                                                                  if(Delivery_Status__c = &quot;Downloaded to Device&quot;, Delivery_Date__c,     if(Delivery_Date__c &lt;TODAY()-DAY(TODAY())+1, TODAY()-DAY(TODAY())+1,    Delivery_Date__c)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F_Delivery_Date</label>
    <type>Date</type>
</CustomField>