force-app/main/default/objects/Order/fields/F_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>F_Invoice_Date__c</fullName>
    <formula>If(isblank(Inv_Serv_Note_Date__c),F_Delivery_Date__c, Inv_Serv_Note_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F_Invoice_Date</label>
    <type>Date</type>
</CustomField>