force-app/main/default/objects/Order/fields/Fruit_Veg_Order__c.field-meta.xml
<CustomField>
    <fullName>Fruit_Veg_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fruit &amp; Veg Order</label>
    <type>Checkbox</type>
</CustomField>