force-app/main/default/objects/Order/fields/HazardousProducts__c.field-meta.xml
<CustomField>
    <fullName>HazardousProducts__c</fullName>
    <label>Hazardous Products</label>
    <summaryFilterItems>
        <field>OrderItem.WTNProduct__c</field>
        <operation>equals</operation>
        <value>Hazardous Consignment Note</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>