force-app/main/default/objects/Order/fields/How_much_waste__c.field-meta.xml
<CustomField>
    <fullName>How_much_waste__c</fullName>
    <inlineHelpText>This is used for the Clearance WTN.</inlineHelpText>
    <label>How much waste?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>