force-app/main/default/objects/Order/fields/In_CS_Care__c.field-meta.xml
<CustomField>
    <fullName>In_CS_Care__c</fullName>
    <formula>IF(reason__c=&quot;Customer Closed&quot;,FALSE, 
IF(reason__c=&quot;Wrong Product&quot;,TRUE, 
IF(reason__c=&quot;Wrong Address&quot;,TRUE, 
IF(reason__c=&quot;Moved Out&quot;,TRUE, 
IF(reason__c=&quot;Can’t Find Location&quot;,TRUE, 
IF(reason__c=&quot;Order Rejected&quot;,TRUE, 
IF(reason__c=&quot;Ran out of Time&quot;,FALSE,FALSE
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In CS Care?</label>
    <type>Checkbox</type>
</CustomField>