force-app/main/default/objects/Order/fields/InsertedAsDelivered__c.field-meta.xml
<CustomField>
    <fullName>InsertedAsDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InsertedAsDelivered</label>
    <type>Checkbox</type>
</CustomField>