force-app/main/default/objects/Order/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <type>TextArea</type>
</CustomField>