force-app/main/default/objects/Order/fields/Inv_Serv_Note_Date__c.field-meta.xml
<CustomField>
    <fullName>Inv_Serv_Note_Date__c</fullName>
    <description>Inv/Serv Note Date from Enqix system.</description>
    <inlineHelpText>Inv/Serv Note Date from Enqix system.</inlineHelpText>
    <label>Inv/Serv Note Date</label>
    <type>Date</type>
</CustomField>