force-app/main/default/objects/Order/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <formula>If(isblank(If(isblank(Inv_Serv_Note_Date__c),F_Delivery_Date__c, 
if(Delivery_Date__c &lt;TODAY()-DAY(TODAY())+1, TODAY()-DAY(TODAY())+1,Inv_Serv_Note_Date__c)   ))
,Requested_Delivery_Date__c,If(isblank(Inv_Serv_Note_Date__c),F_Delivery_Date__c,
if(Delivery_Date__c &lt;TODAY()-DAY(TODAY())+1, TODAY()-DAY(TODAY())+1,Inv_Serv_Note_Date__c)  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InvoiceDate</label>
    <type>Date</type>
</CustomField>