force-app/main/default/objects/Order/fields/InvoicedDate__c.field-meta.xml
<CustomField>
    <fullName>InvoicedDate__c</fullName>
    <label>Invoiced Date</label>
    <type>Date</type>
</CustomField>