force-app/main/default/objects/Order/fields/is_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>is_Salesforce__c</fullName>
    <defaultValue>true</defaultValue>
    <label>is Salesforce</label>
    <type>Checkbox</type>
</CustomField>