force-app/main/default/objects/Order/fields/Is_wheelie_bin_order__c.field-meta.xml
<CustomField>
    <fullName>Is_wheelie_bin_order__c</fullName>
    <formula>OR(IsBinCollection__c, PO_Number__c = &apos;WheelieBinOrder0&apos;)</formula>
    <label>Is wheelie bin order?</label>
    <type>Checkbox</type>
</CustomField>