force-app/main/default/objects/Order/fields/IsAdvance__c.field-meta.xml
<CustomField>
    <fullName>IsAdvance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advance?</label>
    <type>Checkbox</type>
</CustomField>