force-app/main/default/objects/Order/fields/IsCentralLondonLocation__c.field-meta.xml
<CustomField>
    <fullName>IsCentralLondonLocation__c</fullName>
    <formula>AND(ShippingLatitude &gt; 51.485, ShippingLatitude &lt; 51.524, ShippingLongitude &gt; -0.150, ShippingLongitude &lt; -0.080)</formula>
    <label>Central London Location?</label>
    <type>Checkbox</type>
</CustomField>