force-app/main/default/objects/Order/fields/IsCollectionByExternalCarrier__c.field-meta.xml
<CustomField>
    <fullName>IsCollectionByExternalCarrier__c</fullName>
    <formula>AND(
    ISPICKVAL(Status, &apos;Confirmed&apos;), ISPICKVAL(Detrack_Status__c, &apos;&apos;),
    Requested_Delivery_Date__c &gt;= TODAY(),
    Number_of_Order_Products__c &gt; 0, Number_of_Order_Products__c = OrderProductsByExternalCarrier__c, OrderProductsByExternalCarrier__c = CollectionProducts__c,
    ISNULL(Delivery_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection By External Carrier?</label>
    <type>Checkbox</type>
</CustomField>