force-app/main/default/objects/Order/fields/IsDeliveryByExternalCarrier__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryByExternalCarrier__c</fullName>
    <formula>AND(Number_of_Order_Products__c &gt; 0, Number_of_Order_Products__c = OrderProductsByExternalCarrier__c, CollectionProducts__c = 0,
NOT(OR(Account.Parent.IsExcludeDeliveryByExternalCarrier__c, Account.IsExcludeDeliveryByExternalCarrier__c)))</formula>
    <label>Delivery By External Carrier?</label>
    <type>Checkbox</type>
</CustomField>