force-app/main/default/objects/Order/fields/IsDeliveryPackageToBeCreated__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryPackageToBeCreated__c</fullName>
    <formula>AND(OR(IsDeliveryByExternalCarrier__c, IsIncludeInDeliveryPacking__c), 
ISPICKVAL(Status, &apos;Confirmed&apos;), Requested_Delivery_Date__c &gt;= TODAY(),
OR(AND(WEEKDAY(TODAY()) = 6, Requested_Delivery_Date__c &lt;= TODAY() + 5), Requested_Delivery_Date__c &lt;= TODAY() + 3),
ISBLANK(RouteName__c), ISNULL(Delivery_Date__c),
OR(NOT(In_CS_Care__c), CS_Issue_Fixed__c))</formula>
    <label>Create Delivery Package?</label>
    <type>Checkbox</type>
</CustomField>