force-app/main/default/objects/Order/fields/IsDeliveryToday__c.field-meta.xml
<CustomField>
    <fullName>IsDeliveryToday__c</fullName>
    <formula>ExpectedDeliveryDate__c = TODAY()</formula>
    <label>Delivery Today</label>
    <type>Checkbox</type>
</CustomField>