force-app/main/default/objects/Order/fields/IsFuelSurchargeEvaluated__c.field-meta.xml
<CustomField>
    <fullName>IsFuelSurchargeEvaluated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fuel Surcharge Evaluated?</label>
    <type>Checkbox</type>
</CustomField>