force-app/main/default/objects/Order/fields/IsIncludeInDeliveryPacking__c.field-meta.xml
<CustomField>
    <fullName>IsIncludeInDeliveryPacking__c</fullName>
    <formula>OR(Account.Parent.IsIncludeInDeliveryPacking__c, Account.IsIncludeInDeliveryPacking__c)</formula>
    <label>Include In Delivery Packing?</label>
    <type>Checkbox</type>
</CustomField>