force-app/main/default/objects/Order/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <formula>AND(ISPICKVAL(Status, &apos;Invoiced&apos;),
OR(ISBLANK(InvoicedDate__c),
IF(DAY(TODAY()) &gt; 4,
InvoicedDate__c &lt; (TODAY() - DAY(TODAY()) + 1),
InvoicedDate__c &lt; ADDMONTHS((TODAY() - DAY(TODAY()) + 1), -1)
)
)
)</formula>
    <label>Locked?</label>
    <type>Checkbox</type>
</CustomField>