force-app/main/default/objects/Order/fields/IsLondonLocation__c.field-meta.xml
<CustomField>
    <fullName>IsLondonLocation__c</fullName>
    <formula>AND(ShippingLatitude &gt; 51.25, ShippingLatitude &lt; 51.75, ShippingLongitude &gt; -0.56, ShippingLongitude &lt; 0.33)</formula>
    <label>London Location?</label>
    <type>Checkbox</type>
</CustomField>