force-app/main/default/objects/Order/fields/isSalesforceRecurring__c.field-meta.xml
<CustomField>
    <fullName>isSalesforceRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalesforceRecurring</label>
    <type>Checkbox</type>
</CustomField>