force-app/main/default/objects/Order/fields/IsValid__c.field-meta.xml
<CustomField>
    <fullName>IsValid__c</fullName>
    <formula>OR(AND(DATEVALUE(CreatedDate)&gt;=DATE(2019,03,01),is_Salesforce__c = true ),AND(DATEVALUE(CreatedDate)&lt;DATE(2019,03,01),is_Salesforce__c = false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsValid</label>
    <type>Checkbox</type>
</CustomField>