force-app/main/default/objects/Order/fields/IsVariableBilling__c.field-meta.xml
<CustomField>
    <fullName>IsVariableBilling__c</fullName>
    <formula>AND(OR(IsBinCollection__c, Recurring__c), OR(Account.Parent.IsVariableBilling__c, OrderProductsOnVariableBilling__c &gt; 0))</formula>
    <label>Variable Billing</label>
    <type>Checkbox</type>
</CustomField>