force-app/main/default/objects/Order/fields/IsVATExemptLocation__c.field-meta.xml
<CustomField>
    <fullName>IsVATExemptLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Exempt Location?</label>
    <type>Checkbox</type>
</CustomField>