force-app/main/default/objects/Order/fields/IsVATExemptPartner__c.field-meta.xml
<CustomField>
    <fullName>IsVATExemptPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT Exempt Partner?</label>
    <type>Checkbox</type>
</CustomField>