force-app/main/default/objects/Order/fields/KWH_Produced__c.field-meta.xml
<CustomField>
    <fullName>KWH_Produced__c</fullName>
    <label>KWH Produced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>