force-app/main/default/objects/Order/fields/Live_Order__c.field-meta.xml
<CustomField>
    <fullName>Live_Order__c</fullName>
    <formula>IF( Test_Date__c &gt;= Account.Realstart__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>