force-app/main/default/objects/Order/fields/Main_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is used in the Clearance WTN for the weight.</inlineHelpText>
    <label>Main Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>